--- a/GraphQueryTest.csproj
+++ b/GraphQueryTest.csproj
@@ -5,8 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="GraphQL.Server.Ui.Voyager" Version="5.0.2" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="11.2.2" />
     <PackageReference Include="HotChocolate.Data.EntityFramework" Version="11.2.2" />
+    <PackageReference Include="Microsoft.EntityframeworkCore.Design" Version="5.0.5">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityframeworkCore.SQLServer" Version="5.0.5" />
   </ItemGroup>
 
 </Project>
