--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "CommandsConStr" : "server=DESKTOP-R0KIVI7:Database=CommandsDB;User Id=test;Password=test123",
-    "CommandsConStr2" : "server=localhost, 1433:Database=CommandsDB;User Id=sa;Password=pa55w0rd!"
+    "CommandsConStr" : "server=DESKTOP-R0KIVI7;Database=TestDB;User Id=test;Password=test123",
+    "CommandsConStr2" : "server=localhost, 1433;Database=CommandsDB;User Id=sa;Password=pa55w0rd!"
   }
 }
